--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,6 +5,31 @@
     <title>Title</title>
 </head>
 <body>
+<div class="container">
+    <div class="m-1 p-1">
+        <h3>Endpoints</h3>
+        <ul class="list-group">
+            <li class="list-group-item"><a href="{{url_for('books')}}" class="btn btn-primary">All</a></li>
+            <li class="list-group-item"><a href="{{url_for('booksid',id=1)}}" class="btn btn-primary">ID</a></li>
+            <li class="list-group-item"><a href="{{url_for('books', published_date=2021)}}" class="btn btn-primary">Example: 2021</a></li>
+            <li class="list-group-item"><a href="{{url_for('books', author=['Jacek Hałas','J. R. R. Tolkien'])}}" class="btn btn-primary">Example: Hałas /Tolkien</a></li>
+            <li class="list-group-item">
+                <form method="POST" action="{{url_for('to_db')}}">
+                    <input class="btn btn-secondary" type="submit" value="Post /db">
+                </form>
+            </li>
+
+        </ul>
+    </div>
+
+</div>
+
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
