--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,15 +9,15 @@
     <div class="m-1 p-1">
         <h3>Endpoints</h3>
         <ul class="list-group">
-            <li class="list-group-item"><a href="{{url_for('books')}}" class="btn btn-primary">All</a></li>
+            <li class="list-group-item"><a href="{{url_for('booksall')}}" class="btn btn-primary">All</a></li>
             <li class="list-group-item"><a href="{{url_for('booksid',id=1)}}" class="btn btn-primary">ID</a></li>
-            <li class="list-group-item"><a href="{{url_for('books', published_date=2021)}}" class="btn btn-primary">Example: 2021</a></li>
-            <li class="list-group-item"><a href="{{url_for('books', author=['Jacek Hałas','J. R. R. Tolkien'])}}" class="btn btn-primary">Example: Hałas /Tolkien</a></li>
-            <li class="list-group-item">
-                <form method="POST" action="{{url_for('to_db')}}">
-                    <input class="btn btn-secondary" type="submit" value="Post /db">
-                </form>
-            </li>
+            <li class="list-group-item"><a href="{{url_for('booksall', published_date=1995)}}" class="btn btn-primary">Example: 1995</a></li>
+            <li class="list-group-item"><a href="{{url_for('booksall', author=['Jacek Hałas','J. R. R. Tolkien'])}}" class="btn btn-primary">Example: Hałas /Tolkien</a></li>
+<!--            <li class="list-group-item">-->
+<!--                <form method="POST" action="{{url_for('to_db')}}">-->
+<!--                    <input class="btn btn-secondary" type="submit" value="Post /db">-->
+<!--                </form>-->
+<!--            </li>-->
 
         </ul>
     </div>
